// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTimePicker.js should accept a date object for a value 1`] = `

<div class="v-picker v-card v-picker--time theme--light">
  <div class="v-picker__title primary">
    <div class="v-time-picker-title">
      <div class="v-time-picker-title__time">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          12
        </div>
        <span>
          :
        </span>
        <div class="v-picker__title__btn">
          00
        </div>
      </div>
      <div class="v-time-picker-title__ampm">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          am
        </div>
        <div class="v-picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="v-time-picker-clock theme--light"
           style="height: 270px; width: 270px;"
      >
        <div class="v-time-picker-clock__hand accent">
        </div>
        <span class="active accent">
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class>
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should accept a value 1`] = `

<div class="v-picker v-card v-picker--time theme--light">
  <div class="v-picker__title primary">
    <div class="v-time-picker-title">
      <div class="v-time-picker-title__time">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          9
        </div>
        <span>
          :
        </span>
        <div class="v-picker__title__btn">
          12
        </div>
      </div>
      <div class="v-time-picker-title__ampm">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          am
        </div>
        <div class="v-picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="v-time-picker-clock theme--light"
           style="height: 270px; width: 270px;"
      >
        <div class="v-time-picker-clock__hand accent">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active accent">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should change am/pm when updated from model 1`] = `

<div class="v-picker v-card v-picker--time theme--light">
  <div class="v-picker__title primary">
    <div class="v-time-picker-title">
      <div class="v-time-picker-title__time">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          9
        </div>
        <span>
          :
        </span>
        <div class="v-picker__title__btn">
          00
        </div>
      </div>
      <div class="v-time-picker-title__ampm">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          am
        </div>
        <div class="v-picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="v-time-picker-clock theme--light"
           style="height: 270px; width: 270px;"
      >
        <div class="v-time-picker-clock__hand accent">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active accent">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should render colored time picker 1`] = `

<div class="v-picker v-card v-picker--time theme--light">
  <div class="v-picker__title orange darken-1">
    <div class="v-time-picker-title">
      <div class="v-time-picker-title__time">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          9
        </div>
        <span>
          :
        </span>
        <div class="v-picker__title__btn">
          00
        </div>
      </div>
      <div class="v-time-picker-title__ampm">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          am
        </div>
        <div class="v-picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="v-time-picker-clock theme--light"
           style="height: 270px; width: 270px;"
      >
        <div class="v-time-picker-clock__hand primary">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active primary">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should render colored time picker 2`] = `

<div class="v-picker v-card v-picker--time theme--light">
  <div class="v-picker__title orange darken-1">
    <div class="v-time-picker-title">
      <div class="v-time-picker-title__time">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          9
        </div>
        <span>
          :
        </span>
        <div class="v-picker__title__btn">
          00
        </div>
      </div>
      <div class="v-time-picker-title__ampm">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          am
        </div>
        <div class="v-picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="v-time-picker-clock theme--light"
           style="height: 270px; width: 270px;"
      >
        <div class="v-time-picker-clock__hand orange darken-1">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active orange darken-1">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should render dark time picker 1`] = `

<div class="v-picker v-card v-picker--time theme--dark">
  <div class="v-picker__title">
    <div class="v-time-picker-title">
      <div class="v-time-picker-title__time">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          --
        </div>
        <span>
          :
        </span>
        <div class="v-picker__title__btn">
          --
        </div>
      </div>
      <div class="v-time-picker-title__ampm">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          am
        </div>
        <div class="v-picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--dark"
       style="width: 290px;"
  >
    <div class="v-time-picker-clock__container"
         style="width: 290px; height: 290px;"
    >
      <div class="v-time-picker-clock v-time-picker-clock--indeterminate theme--dark"
           style="height: 270px; width: 270px;"
      >
        <div class="v-time-picker-clock__hand">
        </div>
        <span class="active">
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class>
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;

exports[`VTimePicker.js should render landscape component 1`] = `

<div class="v-picker v-card v-picker--time v-picker--landscape theme--light">
  <div class="v-picker__title v-picker__title--landscape primary">
    <div class="v-time-picker-title">
      <div class="v-time-picker-title__time">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          9
        </div>
        <span>
          :
        </span>
        <div class="v-picker__title__btn">
          12
        </div>
      </div>
      <div class="v-time-picker-title__ampm">
        <div class="v-picker__title__btn v-picker__title__btn--active">
          am
        </div>
        <div class="v-picker__title__btn">
          pm
        </div>
      </div>
    </div>
  </div>
  <div class="v-picker__body theme--light"
       style="width: 290px;"
  >
    <div class="v-time-picker-clock__container"
         style="width: 290px; height: 230px;"
    >
      <div class="v-time-picker-clock theme--light"
           style="height: 210px; width: 210px;"
      >
        <div class="v-time-picker-clock__hand accent">
        </div>
        <span class>
          <span>
            12
          </span>
        </span>
        <span class>
          <span>
            1
          </span>
        </span>
        <span class>
          <span>
            2
          </span>
        </span>
        <span class>
          <span>
            3
          </span>
        </span>
        <span class>
          <span>
            4
          </span>
        </span>
        <span class>
          <span>
            5
          </span>
        </span>
        <span class>
          <span>
            6
          </span>
        </span>
        <span class>
          <span>
            7
          </span>
        </span>
        <span class>
          <span>
            8
          </span>
        </span>
        <span class="active accent">
          <span>
            9
          </span>
        </span>
        <span class>
          <span>
            10
          </span>
        </span>
        <span class>
          <span>
            11
          </span>
        </span>
      </div>
    </div>
  </div>
</div>

`;
